new changes on reports
